template for web is completed to review

--- a/egs/voicehome/frontend/css/style.css
+++ b/egs/voicehome/frontend/css/style.css
@@ -28,7 +28,7 @@ body {
 
 .home-switches div.col-sm-3 {
 	/* margin-right: 300px; */
-    padding-bottom: 10px;
+	padding-bottom: 10px;
 }
 
 /* @media (max-width:992px) {
@@ -39,7 +39,46 @@ body {
   }
   */
 
+.chart-container {
+	position: relative;
+	margin: auto;
+	height: 70vh;
+	width: 80vw;
+}
 
+canvas {
+	border: 1px dotted red;
+}
 
+.container-fluid {
+	overflow: hidden;
+	margin-top: 250px;
+	background: #262626;
+	color: #627482 !important;
+	margin-bottom: 0;
+	padding-bottom: 0
+}
 
-  
+small {
+	font-size: calc(12px + (15 - 12) * ((100vw - 360px) / (1600 - 360))) !important
+}
+
+.bold-text {
+	color:  !important
+}
+
+.mt-55 {
+	margin-top: calc(50px + (60 - 50) * ((100vw - 360px) / (1600 - 360))) !important
+}
+
+h3 {
+	font-size: calc(34px + (40 - 34) * ((100vw - 360px) / (1600 - 360))) !important
+}
+
+.social {
+	font-size: 21px !important
+}
+
+.rights {
+	font-size: calc(10px + (12 - 10) * ((100vw - 360px) / (1600 - 360))) !important
+}
