--- a/egs/voicehome/frontend/css/style.css
+++ b/egs/voicehome/frontend/css/style.css
@@ -20,6 +20,10 @@ div.scrollmenu a:hover {
 /* BODY */
 body {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	overflow-x: hidden;
+}
+body* {
+	max-width: none;
 }
 
 #home-analytics {
@@ -29,6 +33,15 @@ body {
 .home-switches div.col-sm-3 {
 	/* margin-right: 300px; */
 	padding-bottom: 10px;
+}
+
+.custom-card-header {
+	flex: 0 0 100%;
+	background-color: rgb(247, 247, 247);
+
+	padding: 0.75rem 1.25rem;
+	margin-bottom: 0;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
 
 /* @media (max-width:992px) {
@@ -56,29 +69,128 @@ canvas {
 	background: #262626;
 	color: #627482 !important;
 	margin-bottom: 0;
-	padding-bottom: 0
+	padding-bottom: 0;
 }
 
 small {
-	font-size: calc(12px + (15 - 12) * ((100vw - 360px) / (1600 - 360))) !important
+	font-size: calc(
+		12px + (15 - 12) * ((100vw - 360px) / (1600 - 360))
+	) !important;
 }
 
 .bold-text {
-	color:  !important
+	color: !important;
 }
 
 .mt-55 {
-	margin-top: calc(50px + (60 - 50) * ((100vw - 360px) / (1600 - 360))) !important
+	margin-top: calc(
+		50px + (60 - 50) * ((100vw - 360px) / (1600 - 360))
+	) !important;
 }
 
 h3 {
-	font-size: calc(34px + (40 - 34) * ((100vw - 360px) / (1600 - 360))) !important
+	font-size: calc(
+		34px + (40 - 34) * ((100vw - 360px) / (1600 - 360))
+	) !important;
 }
 
 .social {
-	font-size: 21px !important
+	font-size: 21px !important;
 }
 
 .rights {
-	font-size: calc(10px + (12 - 10) * ((100vw - 360px) / (1600 - 360))) !important
+	font-size: calc(
+		10px + (12 - 10) * ((100vw - 360px) / (1600 - 360))
+	) !important;
 }
+
+/* Martina */
+
+/* body {
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#header {
+	position: absolute;
+	top: 30px;
+	left: 15%;
+	width: 70%;
+	color: darkblue;
+	background-color: aliceblue;
+	text-align: center;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border-radius: 10px;
+}
+
+#modules {
+	position: absolute;
+	top: 100px;
+	left: 20%;
+	width: 60%;
+	color: darkblue;
+	background-color: slategray;
+	text-align: center;
+	line-height: 1.5em;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border-radius: 10px;
+}
+
+.module {
+	background-color: floralwhite;
+	padding: 10px;
+	margin: 10px;
+	border-radius: 10px;
+	border: 1px solid black;
+}
+
+.module_title {
+	font-weight: bold;
+	font-size: 100%;
+}
+
+.module_description {
+	color: black;
+	font-size: 80%;
+	text-align: left;
+}
+
+.module_moves {
+	padding: 10px;
+	margin: 10px;
+	border-radius: 10px;
+}
+
+.move {
+	background-color: whitesmoke;
+	padding: 10px;
+	margin: 10px;
+	border-radius: 10px;
+}
+
+.move_title {
+	font-weight: bold;
+	font-size: 80%;
+}
+
+.move_description {
+	color: black;
+	text-align: left;
+	font-size: 80%;
+}
+
+.move_calls {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+
+.move_call {
+	color: yellow;
+	background-color: lightslategray;
+	font-size: 75%;
+	padding: 3px 7px 3px 7px;
+	margin: 5px;
+	border-radius: 5px;
+} */
