--- a/egs/voicehome/frontend/css/style.css
+++ b/egs/voicehome/frontend/css/style.css
@@ -67,6 +67,14 @@ body* {
 	width: 80vw;
 }
 
+#graph {
+	position: absolute;
+	left: 10px;
+	right: 10px;
+	top: 40px;
+	bottom: 10px;
+}
+
 canvas {
 	border: 1px dotted red;
 }
