--- a/egs/voicehome/frontend/css/style.css
+++ b/egs/voicehome/frontend/css/style.css
@@ -60,19 +60,18 @@ body* {
   }
   */
 
-.chart-container {
+/* .chart-container {
 	position: relative;
-	margin: auto;
+	
 	height: 70vh;
 	width: 80vw;
-}
+} */
 
-#graph {
-	position: absolute;
-	left: 10px;
-	right: 10px;
-	top: 40px;
-	bottom: 10px;
+.graph {
+	position: relative;
+	margin: auto;
+	height: 40vh;
+	width: 80vw;
 }
 
 canvas {
