--- a/egs/voicehome/frontend/css/style.css
+++ b/egs/voicehome/frontend/css/style.css
@@ -78,6 +78,10 @@ canvas {
 	border: 1px dotted red;
 }
 
+div.filter-container {
+	margin: auto;
+}
+
 .container-fluid {
 	overflow: hidden;
 	margin-top: 250px;
