--- a/egs/voicehome/frontend/css/style.css
+++ b/egs/voicehome/frontend/css/style.css
@@ -150,6 +150,7 @@ div#measured_value_container {
 div.measured_values_item {
 	margin-left: 10px;
 	margin-top: 30px;
+	width: 200px;
 }
 
 div.sensors.row.measured_value {
