mqtt added to JS.

--- a/egs/smartlights/frontend/style.css
+++ b/egs/smartlights/frontend/style.css
@@ -6,6 +6,14 @@ body {
     color: darkblue;
 }
 
+#mqtt_message_target {
+    width: 100%;
+    text-align: center;
+    font-style: italic;
+    color: maroon;
+    margin-top: 150px;
+}
+
 .common_class {
     line-height: 1.5em;
 }
