--- a/egs/smartlights/frontend/style.css
+++ b/egs/smartlights/frontend/style.css
@@ -12,8 +12,58 @@ body {
     font-style: italic;
     color: maroon;
     margin-top: 150px;
+    visibility: hidden;
 }
 
 .common_class {
     line-height: 1.5em;
+}
+
+#button_container {
+    width: 100%;
+    text-align: center;
+}
+
+#footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+
+.light_switch {
+    cursor: pointer;
+    transition-duration: 0.3s;
+    border-radius: 50%;
+    min-width: 20px;
+    min-height: 20px;
+    width: 8vw;
+    height: 8vw;
+    margin-right: 6%;
+    margin-left: 6%;
+}
+
+.light_off {
+    border: 2px solid black;
+    background-color: black;
+    color: white;
+    
+}
+
+.light_on {
+    border: 2px solid black;
+    background-color: white;
+    color: black;
+}
+
+.light_on:hover {
+    border: 2px solid black;
+    background-color: darkgray;
+    color: white;
+}
+
+.light_off:hover {
+    border: 2px solid black;
+    background-color: lightgray;
+    color: black;
 }
